--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,20 +43,7 @@ jobs:
           mkdir -p ~/.android
           touch ~/.android/repositories.cfg
           yes | sdkmanager --licenses || true
-          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-
-      - name: Set up Android SDK
-        run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
-          curl -o sdk.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip sdk.zip -d latest
-          rm sdk.zip
-          yes | ./latest/bin/sdkmanager --licenses
-          ./latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-        env:
-          ANDROID_HOME: $HOME/android-sdk
-          PATH: $HOME/android-sdk/cmdline-tools/latest/bin:$PATH
+          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3" || echo "sdkmanager command not found"
 
       - name: Build APK
         run: buildozer -v android debug
